fix(location6): fix info text font size scaling on tablet

--- a/editor-components/location/location6/location6.module.scss
+++ b/editor-components/location/location6/location6.module.scss
@@ -147,7 +147,7 @@
               font-size: 1rem !important;
 
               .info {
-                font-size: 0.75rem;
+                font-size: 0.75rem !important;
                 color: var(--composer-tertiary-color);
               }
 
@@ -264,7 +264,7 @@
                   }
 
                   .info {
-                    font-size: 0.75rem;
+                    font-size: 0.75rem !important;
                   }
                 }
 
